force-app/main/default/objects/Raw_Material__c/fields/INCI__c.field-meta.xml
<CustomField>
    <fullName>INCI__c</fullName>
    <description>Official ingredient name according to INCI nomenclature (International Nomenclature of Cosmetic Ingredients)</description>
    <inlineHelpText>International Nomenclature of Cosmetic Ingredients</inlineHelpText>
    <label>INCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>