force-app/main/default/objects/Raw_Material__c/fields/Material_Category__c.field-meta.xml
<CustomField>
    <fullName>Material_Category__c</fullName>
    <description>Material category: tensionactivo, aroma o aceite esencial, liquido, conservante</description>
    <label>Material Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tensionactivo</fullName>
            </value>
            <value>
                <fullName>Principio activo</fullName>
            </value>
            <value>
                <fullName>Aceite esencial/Aroma</fullName>
            </value>
            <value>
                <fullName>Liquido</fullName>
            </value>
            <value>
                <fullName>Conservante</fullName>
            </value>
            <value>
                <fullName>Emulsionante</fullName>
            </value>
            <value>
                <fullName>Aceites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>